kubernetes/clusters/kenobi/argocd/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: argocd-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argocd-feldman-in-tls
      hosts:
        - argocd.feldman.in
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: argocd

spec:
  hosts:
    - argocd.feldman.in
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server
