kubernetes/clusters/kenobi/argocd/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.feldman.in`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-feldman-in-tls
